# twitter_fastapi

./: .dockerignore  .gitignore  .gitlab-ci.full.yml  .gitlab-ci.private.yml  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.tests.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_02_19_2112-94dee8b1194d_init.py  2023_03_06_2222-4c1723e0c7b6_added_media_model.py  2023_03_08_1944-921ddc186ae8_added_chain_between_media_and_twit.py  2023_03_08_2134-a07cd9063138_remove_user_from_media.py  2023_03_09_2314-2d33c5bdfad7_init.py  2023_03_11_2300-c2cf0d3ec332_like.py  2023_03_12_1643-9065c8b0f388_follower.py  302cc3394fd8_twit.py  dc7984d0affb_init_migration.py
scripts/: create_test_db.sh  fastapi_entrypoint.sh  linters.sh  tests.sh
src/: main.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: media.py  twits.py  users.py
src/core/: api_responses.py  config.py  exceptions.py
src/crud/: __init__.py  base.py  follow.py  like.py  media.py  twit.py  user.py
src/db/: base.py  base_class.py  init_db.py  session.py
src/models/: __init__.py  media.py  twit.py  user.py
src/schemas/: __init__.py  follow.py  media.py  twit.py  user.py
src/static/: index.html
src/static/js/: app.7c9275be.js  app.7c9275be.js.map
src/tests/: conftest.py  factories.py
src/tests/api/api_v1/: test_media.py  test_twits.py  test_users.py
src/tests/crud/: test_crud_media.py  test_media.py  test_twit.py  test_user.py
src/tests/utils/: test_utils.py
src/utils/: __init__.py  utils.py
