[tool.poetry]
name = "twitter"
version = "0.1.0"
description = "almost twitter"
authors = ["Nikolai Zinchenko <nikolaizinchenko94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
sqlalchemy = "^2.0.2"
alembic = "^1.9.2"


[tool.poetry.group.linters.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.0.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
