[tool.poetry]
name = "twitter"
version = "0.1.0"
description = "almost twitter"
authors = ["Nikolai Zinchenko <nikolaizinchenko94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
sqlalchemy = "^2.0.2"
alembic = "^1.9.2"
sqlalchemy-stubs = "^0.4"
asyncpg = "^0.27.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"


[tool.poetry.group.linters.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.0.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
types-aiofiles = "^22.1.0.9"
factory-boy = "^3.2.1"
types-factory-boy = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
